[package]
name = "audio-engine"
version = "0.1.0"
edition = "2021"
authors = ["Sound Blue Music"]
description = "Pro-grade audio engine for Web DAW - Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

# JavaScript interop
js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = [
    "console",
    "AudioContext",
    "AudioWorkletNode",
    "AudioWorkletProcessor",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "GainNode",
    "BiquadFilterNode",
    "DelayNode",
    "DynamicsCompressorNode",
    "OscillatorNode",
    "WaveShaperNode",
    "AnalyserNode",
    "MediaStreamAudioSourceNode",
    "OfflineAudioContext",
] }

# Error handling
console_error_panic_hook = { version = "0.1.7", optional = true }

# Audio DSP
dasp = "0.11.0"
dasp_sample = "0.11.0"
dasp_signal = "0.11.0"
dasp_ring_buffer = "0.11.0"

# FFT for spectrum analysis
rustfft = "6.2.0"

# Random for noise generation
fastrand = "2.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1

# Keep panic for debugging in dev
# For production, set to 'abort'
panic = "abort"
